--- a/runpod/a1111-sdwebui/Dockerfile
+++ b/runpod/a1111-sdwebui/Dockerfile
@@ -19,20 +19,13 @@ RUN conda init bash && . ~/.bashrc
 
 RUN conda install -y jupyter jupyterlab jupyterlab_widgets ipykernel ipywidgets -c conda-forge
 RUN conda install -y huggingface_hub transformers safetensors tokenizers datasets -c huggingface
-RUN conda install -y diffusers accelerate sentence-transformers -c conda-forge 
+RUN conda install -y diffusers accelerate sentence-transformers -c conda-forge
+
+EXPOSE 7860
 
 RUN git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui.git
 WORKDIR /app/stable-diffusion-webui
 RUN git checkout tags/${WEBUI_VERSION}
-
-RUN mkdir -vp /app/stable-diffusion-webui/models/Stable-diffusion/sd15 && \
-    mkdir -vp /app/stable-diffusion-webui/models/Stable-diffusion/sdxl
-RUN wget -P /app/stable-diffusion-webui/models/Stable-diffusion/sd15 https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned-emaonly.safetensors
-RUN wget -P /app/stable-diffusion-webui/models/Stable-diffusion/sd15 https://huggingface.co/runwayml/stable-diffusion-inpainting/resolve/main/sd-v1-5-inpainting.ckpt
-RUN wget -P /app/stable-diffusion-webui/models/Stable-diffusion/sd15 https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/AbyssOrangeMix3/AOM3A1B_orangemixs.safetensors
-RUN wget -P /app/stable-diffusion-webui/models/Stable-diffusion/sdxl https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_base_1.0.safetensors
-RUN wget -P /app/stable-diffusion-webui/models/Stable-diffusion/sdxl https://huggingface.co/stabilityai/stable-diffusion-xl-refiner-1.0/resolve/main/sd_xl_refiner_1.0.safetensors
-RUN wget -P /app/stable-diffusion-webui/models/Stable-diffusion/sdxl https://huggingface.co/cagliostrolab/animagine-xl-3.1/resolve/main/animagine-xl-3.1.safetensors
 
 RUN pip install --no-cache-dir xformers==${XFORMERS_VERSION} --index-url ${INDEX_URL}
 RUN pip install tensorflow tensorboard tensorboardx
