--- a/docker-compose.runpod.yml
+++ b/docker-compose.runpod.yml
@@ -69,7 +69,7 @@ services:
       context: ./build/a1111-sdwebui
       dockerfile: Dockerfile.runpod
       additional_contexts:
-        - &resources resources=./resources
+        - &resources resources=./resources/a1111-sdwebui
         - workspace=./workspace/stable-diffusion-webui
       args:
         WEBUI_VERSION: &WEBUI_VERSION v1.10.1
