--- a/resources/a1111-sdwebui/a1111-sdwebui.conf
+++ b/resources/a1111-sdwebui/a1111-sdwebui.conf
@@ -1,7 +1,30 @@
 server {
     listen 3010;
-    server_name localhost;
 
+    location /ws {
+        proxy_http_version 1.1;
+        proxy_set_header Accept-Encoding gzip;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        add_header Cache-Control no-cache;
+        proxy_set_header Host $host;
+
+        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+	    proxy_set_header   X-Real-IP		$remote_addr;
+        proxy_pass http://localhost:7860;
+    }
+    location /queue/join {
+        proxy_http_version 1.1;
+        proxy_set_header Accept-Encoding gzip;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        add_header Cache-Control no-cache;
+        proxy_set_header Host $host;
+
+        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+	    proxy_set_header   X-Real-IP		$remote_addr;
+        proxy_pass http://localhost:7860;
+    }
     location / {
         add_header Cache-Control no-cache;
         proxy_pass http://localhost:7860;
