--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,13 @@ services:
         TORCH_CUDA_VERSION: &TORCH_CUDA_VERSION 12.4
         INDEX_URL: &INDEX_URL https://download.pytorch.org/whl/cu124
         XFORMERS_VERSION: &XFORMERS_VERSION 0.0.28.post3
+    environment:
+      - &HF_HOME HF_HOME=/app/.cache/huggingface
+      - &HF_DATASETS_CACHE HF_DATASETS_CACHE=/app/.cache/huggingface/datasets
+      - &DEFAULT_HF_METRICS_CACHE DEFAULT_HF_METRICS_CACHE=/app/.cache/huggingface/metrics
+      - &DEFAULT_HF_MODULES_CACHE DEFAULT_HF_MODULES_CACHE=/app/.cache/huggingface/modules
+      - &HUGGINGFACE_HUB_CACHE HUGGINGFACE_HUB_CACHE=/app/.cache/huggingface/hub
+      - &HUGGINGFACE_ASSETS_CACHE HUGGINGFACE_ASSETS_CACHE=/app/.cache/huggingface/assets
   ollama:
     <<: *base_service
     image: ollama/ollama:latest
@@ -72,7 +79,6 @@ services:
       - ./stable-diffusion-models/models/upscale_models/LDSR:/app/stable-diffusion-webui/models/LDSR
       - ./stable-diffusion-models/models/vae:/app/stable-diffusion-webui/models/VAE
       - ./stable-diffusion-models/models/vae_approx:/app/stable-diffusion-webui/models/VAE-approx
-      - ./workspace/stable-diffusion-webui/.cache/huggingface:/app/stable-diffusion-webui/.cache/huggingface
       - ./workspace/stable-diffusion-webui/extensions:/app/stable-diffusion-webui/extensions
       - ./workspace/stable-diffusion-webui/webui-user.sh:/app/stable-diffusion-webui/webui-user.sh
       - ./workspace/stable-diffusion-webui/config.json:/app/stable-diffusion-webui/config.json
@@ -89,12 +95,22 @@ services:
         TORCH_CUDA_VERSION: *TORCH_CUDA_VERSION
         INDEX_URL: *INDEX_URL
         XFORMERS_VERSION: *XFORMERS_VERSION
+    environment:
+      - *HF_HOME
+      - *HF_DATASETS_CACHE
+      - *DEFAULT_HF_METRICS_CACHE
+      - *DEFAULT_HF_MODULES_CACHE
+      - *HUGGINGFACE_HUB_CACHE
+      - *HUGGINGFACE_ASSETS_CACHE
   stable-diffusion-webui-runpod:
     <<: *stable-diffusion-webui
     image: bean980310/stable-diffusion-webui:runpod
     build:
       context: ./build/a1111-sdwebui
       dockerfile: Dockerfile.runpod
+      additional_contexts:
+        - resources=./resources/a1111-sdwebui
+        - workspace=./workspace/stable-diffusion-webui
   kohya_ss:
     <<: *base_service
     image: bean980310/kohya-ss:latest
@@ -102,7 +118,6 @@ services:
     volumes:
       - kohya_ss:/app/kohya_ss
       - ./stable-diffusion-models/models/checkpoints:/app/kohya_ss/models
-      - ./workspace/kohya_ss/.cache/huggingface:/app/kohya_ss/.cache/huggingface
       - ./workspace/kohya_ss/dataset:/app/kohya_ss/dataset
       - ./workspace/kohya_ss/dataset/images:/app/kohya_ss/dataset/images
       - ./workspace/kohya_ss/dataset/logs:/app/kohya_ss/dataset/logs
@@ -121,7 +136,14 @@ services:
         TORCH_CUDA_VERSION: *TORCH_CUDA_VERSION
         INDEX_URL: *INDEX_URL
         XFORMERS_VERSION: *XFORMERS_VERSION
-  comfyui:
+    environment:
+      - *HF_HOME
+      - *HF_DATASETS_CACHE
+      - *DEFAULT_HF_METRICS_CACHE
+      - *DEFAULT_HF_MODULES_CACHE
+      - *HUGGINGFACE_HUB_CACHE
+      - *HUGGINGFACE_ASSETS_CACHE
+  comfyui: &comfyui
     <<: *base_service
     image: bean980310/comfyui:latest
     container_name: comfyui
@@ -147,7 +169,6 @@ services:
       - ./stable-diffusion-models/models/upscale_models:/app/ComfyUI/modeos/upscale_models
       - ./stable-diffusion-models/models/vae:/app/ComfyUI/models/vae
       - ./stable-diffusion-models/models/vae_approx:/app/ComfyUI/models/vae_approx
-      - ./workspace/ComfyUI/.cache/huggingface:/app/ComfyUI/.cache/huggingface
       - ./workspace/ComfyUI/custom_nodes:/app/ComfyUI/custom_nodes
       - ./workspace/ComfyUI/extra_model_paths.yaml:/app/ComfyUI/extra_model_paths.yaml
       - ./outputs/ComfyUI:/app/ComfyUI/output
@@ -163,6 +184,22 @@ services:
         TORCH_CUDA_VERSION: *TORCH_CUDA_VERSION
         INDEX_URL: *INDEX_URL
         XFORMERS_VERSION: *XFORMERS_VERSION
+    environment:
+      - *HF_HOME
+      - *HF_DATASETS_CACHE
+      - *DEFAULT_HF_METRICS_CACHE
+      - *DEFAULT_HF_MODULES_CACHE
+      - *HUGGINGFACE_HUB_CACHE
+      - *HUGGINGFACE_ASSETS_CACHE
+  comfyui-runpod:
+    <<: *comfyui
+    image: bean980310/comfyui:runpod
+    build:
+      context: ./build/comfyui
+      dockerfile: Dockerfile.runpod
+      additional_contexts:
+        - resources=./resources/comfyui
+        - workspace=./workspace/ComfyUI
   invokeai:
     <<: *base_service
     image: bean980310/invokeai:latest
@@ -170,7 +207,6 @@ services:
     volumes:
       - invokeai:/app/InvokeAI
       - ./stable-diffusion-models/models:/app/InvokeAI/models
-      - ./workspace/InvokeAI/.cache/huggingface:/app/InvokeAI/.cache/huggingface
       - ./workspace/InvokeAI/custom_nodes:/app/InvokeAI/custom_nodes
       - ./workspace/InvokeAI/invokeai.yaml:/app/InvokeAI/invokeai.yaml
       - ./outputs/InvokeAI:/app/InvokeAI/outputs
@@ -185,6 +221,13 @@ services:
         TORCH_CUDA_VERSION: *TORCH_CUDA_VERSION
         INDEX_URL: https://download.pytorch.org/whl/cu124
         XFORMERS_VERSION: 0.0.28.post1
+    environment:
+      - *HF_HOME
+      - *HF_DATASETS_CACHE
+      - *DEFAULT_HF_METRICS_CACHE
+      - *DEFAULT_HF_MODULES_CACHE
+      - *HUGGINGFACE_HUB_CACHE
+      - *HUGGINGFACE_ASSETS_CACHE
   open-webui:
     <<: *base_service
     image: bean980310/open-webui:latest
@@ -234,7 +277,6 @@ services:
       - ./stable-diffusion-models/models/upscale_models:/app/Fooocus/models/upscale_models
       - ./stable-diffusion-models/models/vae:/app/Fooocus/models/vae
       - ./stable-diffusion-models/models/vae_approx:/app/Fooocus/models/vae_approx
-      - ./workspace/Fooocus/.cache/huggingface:/app/Fooocus/.cache/huggingface
       - ./workspace/Fooocus/config.txt:/app/Fooocus/config.txt
       - ./outputs/Fooocus:/app/Fooocus/outputs
     ports:
@@ -248,6 +290,13 @@ services:
         TORCH_CUDA_VERSION: *TORCH_CUDA_VERSION
         INDEX_URL: *INDEX_URL
         XFORMERS_VERSION: *XFORMERS_VERSION
+    environment:
+      - *HF_HOME
+      - *HF_DATASETS_CACHE
+      - *DEFAULT_HF_METRICS_CACHE
+      - *DEFAULT_HF_MODULES_CACHE
+      - *HUGGINGFACE_HUB_CACHE
+      - *HUGGINGFACE_ASSETS_CACHE
   sdnext:
     <<: *base_service
     image: bean980310/sdnext:latest
@@ -257,7 +306,6 @@ services:
       - ./stable-diffusion-models/models:/app/automatic/models
       - ./stable-diffusion-models/models/configs:/app/automatic/configs
       - ./stable-diffusion-models/models/vae_approx:/app/automatic/models/VAE-approx
-      - ./workspace/SD.Next/.cache/huggingface:/app/automatic/.cache/huggingface
       - ./workspace/SD.Next/extensions:/app/automatic/extensions
       - ./workspace/SD.Next/config.json:/app/automatic/config.json
       - ./workspace/SD.Next/ui-config.json:/app/automatic/ui-config.json
@@ -273,6 +321,13 @@ services:
         TORCH_CUDA_VERSION: *TORCH_CUDA_VERSION
         INDEX_URL: *INDEX_URL
         XFORMERS_VERSION: *XFORMERS_VERSION
+    environment:
+      - *HF_HOME
+      - *HF_DATASETS_CACHE
+      - *DEFAULT_HF_METRICS_CACHE
+      - *DEFAULT_HF_MODULES_CACHE
+      - *HUGGINGFACE_HUB_CACHE
+      - *HUGGINGFACE_ASSETS_CACHE
   swarmui:
     <<: *base_service
     image: bean980310/swarmui:latest
@@ -282,7 +337,6 @@ services:
       - swarmbackend:/app/SwarmUI/dlbackend
       - swarmui:/app/SwarmUI
       - ./stable-diffusion-models/models:/app/SwarmUI/Models
-      - ./workspace/SwarmUI/.cache/huggingface:/app/SwarmUI/.cache/huggingface
       - ./outputs/SwarmUI:/app/SwarmUI/Output
     ports:
       - "7801:7801"
@@ -298,6 +352,12 @@ services:
         XFORMERS_VERSION: *XFORMERS_VERSION
     environment:
       - SWARM_NO_VENV='true'
+      - *HF_HOME
+      - *HF_DATASETS_CACHE
+      - *DEFAULT_HF_METRICS_CACHE
+      - *DEFAULT_HF_MODULES_CACHE
+      - *HUGGINGFACE_HUB_CACHE
+      - *HUGGINGFACE_ASSETS_CACHE
   facefusion:
     <<: *base_service
     image: bean980310/facefusion:latest
@@ -305,7 +365,6 @@ services:
     volumes:
       - facefusion:/app/facefusion
       - ./workspace/facefusion/.assets:/app/facefusion/.assets
-      - ./workspace/facefusion/.cache/huggingface:/app/facefusion/.cache/huggingface
     ports:
       - "3070:7860"
     build:
@@ -320,6 +379,12 @@ services:
     environment:
       - GRADIO_SERVER_NAME=0.0.0.0
       - GRADIO_SERVER_PORT=7860
+      - *HF_HOME
+      - *HF_DATASETS_CACHE
+      - *DEFAULT_HF_METRICS_CACHE
+      - *DEFAULT_HF_MODULES_CACHE
+      - *HUGGINGFACE_HUB_CACHE
+      - *HUGGINGFACE_ASSETS_CACHE
   # stable-audio-tools:
   #   <<: *base_service
   #   image: bean980310/stable-audio-tools:latest
@@ -349,7 +414,6 @@ services:
     volumes:
       - audiocraft_plus:/app/audiocraft_plus
       - ./audiocraft-models/models:/app/audiocraft_plus/models
-      - ./workspace/audiocraft_plus/.cache/huggingface:/app/audiocraft_plus/.cache/huggingface
     ports:
       - "7877:7877"
     build:
@@ -360,6 +424,13 @@ services:
         TORCH_CUDA_VERSION: *TORCH_CUDA_VERSION
         INDEX_URL: *INDEX_URL
         XFORMERS_VERSION: *XFORMERS_VERSION
+    environment:
+      - *HF_HOME
+      - *HF_DATASETS_CACHE
+      - *DEFAULT_HF_METRICS_CACHE
+      - *DEFAULT_HF_MODULES_CACHE
+      - *HUGGINGFACE_HUB_CACHE
+      - *HUGGINGFACE_ASSETS_CACHE
 
 volumes:
   ollama:
